--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>503: in maintenance</h1>
     <p>next slot for changes: 20 / 1 / 24 from 1:00am to 2:00am</p>
+    <p>current published site is under http://flows.li </p>
 </body>
 </html>
