--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>flows.li</title>
+    <title>preview.flows.li</title>
 </head>
 <body>
     <h1>503: in maintenance</h1>
     <p>next slot for changes: 20 / 1 / 24 from 1:00am to 2:00am</p>
-    <p>current published site is under http://flows.li </p>
+    <p>current published site is at http://flows.li </p>
 </body>
 </html>
